# battery_degradation_prediction

./: .gitignore  .pylintrc  README.md  make_training_set.py  pyproject.toml
.github/workflows/: build.yml  documentation.yml  lint.yml
battery_degradation_prediction/: importing_mat2csv_raw_data.py  load_data.py  preprocessing.py  reprocessing_raw_data.py
battery_degradation_prediction/src/battery_degradation_prediction/: .pylintrc  visualizing_cycle_data.py
battery_degradation_prediction/src/battery_degradation_prediction/mat2csv/: datetime_plus_durations.m  mat2csv.m
data/: README.md
examples/battery_degradation_prediction/: convert_matlab_to_csv.ipynb  example_supervised.ipynb  example_unsupervised.ipynb
images/: data_example.png:Zone.Identifier
source/battery_degradation_prediction/: load_data.py  visualizing_cycle_data.py
source/mat2csv/: write_discharging_data.m
src/battery_degradation_prediction/: convert_matlab_to_csv.ipynb  enviroment.yml  evaluate.py  get_dataset.py  interpolate.py  load_data.py  lstm_vae.py  model.py  plot_model.py  predict.py  preprocessing.py  pytorch_example.py  supervised_model  supervised_model_10  supervised_model_100  supervised_model_159  supervised_model_50  train.py  train_reduction.py  unsupervised_model  visualizing_cycle_data.py  window.py
src/battery_degradation_prediction/mat2csv/: mat2csv.m  write_charging_data.m
tests/unit/battery_degradation_prediction/: test_preprocessing.py  test_window.py
