[tool.poetry]
name = "battery_degradation_prediction"
version = "0.1.0"
description = ""
authors = ["Po-Hao Chiu <pohaoc2@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
scipy = "^1.10.0"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.10"
mypy = "^0.991"
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
